# g4simple

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md  g4sh5.py  g4simple.cc  run.mac  visualize.mac
Example/: geCounter.gdml  run.mac  vis.mac
Example/hdf5PostProc/: drawPostProcessedHdf5.py  mplstyle.txt  postprochdf5.py
Example/rootPostProc/: Makefile  drawPostProcessedRoot.C  postprocroot.cc  simpleDrawRoot.C
PostProcExamples/hdf5/: drawPostProcessedHdf5.py  postprochdf5.py
PostProcExamples/root/: postprocroot.cc
